src/styles/buttons.module.css
.buttons {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    min-height: 50px;
    margin-top: 10px;
    z-index: 10;
    position: fixed;
    gap: 20px;
    top: 20px;
    right: 5dvw;
}


.buttons span {
    padding: 1rem;
    background-color: rgba(var(--card-rgb), 0.5);
    border: 1px solid rgba(var(--card-border-rgb), 0.3);
    border-radius: var(--border-radius);
}

.buttons h2 {
    font-weight: 600;
    margin-bottom: 0.7rem;
}


/* Mobile */
@media (max-width: 700px) {
    .buttons {
        gap: 25px;
        top: 20px;
        left: 5vw;
        right: 5vw;
    }
    .buttons > * {
        flex-basis: calc(33.33% - 20px);
    }

    .buttons span, .buttons h2 {
        padding: 10px;
    }
}

/* Tablet and Smaller Desktop */
@media (min-width: 701px) and (max-width: 1120px) {
    .buttons {
        right: 10dvw;
    }
}

